--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -37,6 +37,7 @@
     font-size: 1.2rem;
     font-style: italic;
     padding: 0 0 0 1.2rem;
+    margin-top: 0.8rem;
   }
 }
 
@@ -68,14 +69,14 @@
 // Affix stylings
 .xcu-prefix,
 .xcu-suffix {
-  --margin-bottom: 8px;
+  // --margin-bottom: 8px;
   --border-color: rgba(var(--theme-rgb--primary), 0.4);
 
   align-items: center;
   border: 1px solid var(--border-color);
   display: flex;
   font-size: var(--font-size--small);
-  margin-bottom: var(--margin-bottom, 0);
+  // margin-bottom: var(--margin-bottom, 0);
   min-height: 3.6rem;
   padding: 0 0.8rem;
   white-space: nowrap;
