refactor(table): hide empty th and don't border footers

--- a/projects/table/src/lib/cell/cell.component.scss
+++ b/projects/table/src/lib/cell/cell.component.scss
@@ -4,10 +4,15 @@ td,
   white-space: nowrap;
   padding: 1.6rem 2.4rem !important;
   vertical-align: middle;
+}
 
-  @media (min-width: 480px) {
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-bottom-color: var(--border-color);
+tbody {
+  td,
+  .table-cell {
+    @media (min-width: 480px) {
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
+      border-bottom-color: var(--border-color);
+    }
   }
 }
