--- a/projects/table/src/lib/head/head.component.scss
+++ b/projects/table/src/lib/head/head.component.scss
@@ -24,6 +24,12 @@ th,
     --text-opacity: 0.87;
   }
 
+  @media (max-width: 479px) {
+    &:empty {
+      display: none;
+    }
+  }
+
   @media (min-width: 480px) {
     border-bottom-style: solid;
     border-bottom-width: 1px;
