--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -17,6 +17,8 @@
 }
 
 .xcu-checkbox-input {
+  --checkbox-border-color: var(--color--gray-300);
+
   appearance: none;
   color-adjust: exact;
   cursor: inherit;
@@ -36,6 +38,10 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
   margin: 0;
+
+  @media (prefers-color-scheme: dark) {
+    --checkbox-border-color: var(--color--gray-600);
+  }
 
   &:checked {
     background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
