--- a/projects/feedback/dialog/src/lib/dialog.component.scss
+++ b/projects/feedback/dialog/src/lib/dialog.component.scss
@@ -53,8 +53,8 @@
     left: 0;
     right: 0;
     opacity: 0.75;
-    background-color: #6b7280;
-    background-color: rgba(107, 114, 128, var(--bg-opacity));
+    background-color: var(--color--gray-500);
+    background-color: rgba(var(--color-rgb--gray-500), var(--bg-opacity));
   }
 }
 
@@ -106,8 +106,8 @@
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   transition-duration: 0.2s;
-  background-color: #fff;
-  background-color: rgba(255, 255, 255, var(--bg-opacity));
+  background-color: var(--color--white);
+  background-color: rgba(var(--color-rgb--white), var(--bg-opacity));
   opacity: 0;
 
   @media (min-width: 640px) {
@@ -131,8 +131,8 @@
 .dialog__content {
   --bg-opacity: 1;
 
-  background-color: #fff;
-  background-color: rgba(255, 255, 255, var(--bg-opacity));
+  background-color: var(--color--white);
+  background-color: rgba(var(--color-rgb--white), var(--bg-opacity));
   padding: 1.6rem;
 
   @media (min-width: 640px) {
