--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -1,7 +1,7 @@
 :host {
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  background-color: #fff;
+  background-color: var(--color--white);
   display: flex;
   flex-direction: column;
 
@@ -35,19 +35,19 @@
   }
 
   &.well {
-    background-color: #f9fafb;
+    background-color: var(--color--gray-50);
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
 
     @media (prefers-color-scheme: dark) {
-      background-color: #1a2632;
+      // background-color: #1a2632;
     }
   }
 
   &.well-on-gray {
-    background-color: #e4e7eb;
+    background-color: var(--color--gray-200);
 
     @media (prefers-color-scheme: dark) {
-      background-color: #1b2733;
+      background-color: var(--color--gray-800);
     }
   }
 }
