--- a/projects/navigation/list/src/lib/list-item/list-item.component.scss
+++ b/projects/navigation/list/src/lib/list-item/list-item.component.scss
@@ -1,6 +1,6 @@
 :host {
-  --list-item__hover-color: #e7f0f3;
-  --list-item__active-color: #cbdee7;
+  --list-item__active-color: var(--color--gray-300);
+  --list-item__hover-color: var(--color--gray-200);
   align-items: center;
   border-radius: 2px;
   color: var(--list-item__color, inherit);
