refactor(button): update button colors to use grays and new secondary style

--- a/projects/button/src/lib/button-group/button-group.component.scss
+++ b/projects/button/src/lib/button-group/button-group.component.scss
@@ -9,9 +9,9 @@
     border-radius: 0 2px 2px 0;
   }
 
-  .xcu-button:not(:first-of-type) {
-    border-left-width: 0 !important;
-  }
+  // .xcu-button:not(:first-of-type) {
+  //   border-left-width: 0 !important;
+  // }
 
   .xcu-button {
     border-radius: 0;
