refactor(switcher): use gray for border color on dark mode

--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   @media (prefers-color-scheme: dark) {
-    --switcher__border-color: var(--color--deep-teal);
+    --switcher__border-color: var(--color--gray-800);
   }
 
   &.menu--active {
