--- a/projects/table/src/lib/head/head.component.scss
+++ b/projects/table/src/lib/head/head.component.scss
@@ -1,17 +1,12 @@
 th,
 .table-head {
-  --bg-opacity: 1;
   --font-size: 1.2rem;
   --text-opacity: 1;
-  --background-color: #f9fafb;
-  --background-color--rgb: 249 250 251;
-  --color: #6b7280;
-  --color--rgb: 107 114 128;
+  --table__background-color: var(--color--gray-50);
+  --color: var(--color--gray-600);
 
-  background-color: var(--background-color);
-  background-color: rgb(var(--background-color--rgb) / var(--bg-opacity));
+  background-color: var(--table__background-color);
   color: var(--color);
-  color: rgb(var(--color--rgb) / var(--text-opacity));
   font-weight: var(--font-weight--semi-bold);
   letter-spacing: 0.06rem;
   padding: 0.8rem 2.4rem !important;
@@ -19,8 +14,8 @@ th,
   text-transform: uppercase;
 
   @media (prefers-color-scheme: dark) {
-    --background-color--rgb: 24 51 68;
-    --color--rgb: 255 255 255;
+    --table__background-color: var(--color--gray-800);
+    --color: var(--color--gray-300);
     --text-opacity: 0.87;
   }
 
