refactor(slide-over): use gray color palette

--- a/projects/slide-over/src/lib/slide-over.component.scss
+++ b/projects/slide-over/src/lib/slide-over.component.scss
@@ -56,8 +56,8 @@
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.5s;
-  background-color: #6b7280;
-  background-color: rgba(107, 114, 128, var(--bg-opacity));
+  background-color: var(--color--gray-500);
+  background-color: rgba(var(--color-rgb--gray-500), var(--bg-opacity));
 }
 
 .slide-over {
