--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -26,13 +26,13 @@
   color: var(--text-gray);
   display: inline-flex;
   font-size: 1.2rem;
-  font-weight: var(--font-weight--bold);
+  font-weight: var(--badge__font-weight, var(--font-weight--bold));
   line-height: 1.6rem;
   // margin-right: 1.2rem;
   padding: 0.4rem 1.2rem;
 
   &.rounded {
-    border-radius: 4px;
+    border-radius: 2px;
   }
 
   &.large {
