--- a/projects/form/radio/src/lib/radio.component.scss
+++ b/projects/form/radio/src/lib/radio.component.scss
@@ -14,6 +14,10 @@
     cursor: default;
   }
 
+  &:focus {
+    outline: 2px solid transparent;
+  }
+
   &.check {
     .xcu-radio-input:checked {
       background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
@@ -37,7 +41,7 @@
     }
 
     &.xcu-radio-checked label {
-      border-color: var(--theme--primary);
+      border-color: rgba(var(--theme-rgb--primary), 0.45);
     }
   }
 }
@@ -50,9 +54,12 @@ label {
   flex-direction: var(--radio-flex-direction, row);
   align-items: var(--radio-align, flex-start);
   padding: var(--radio-padding, 0);
+  width: 100%;
+  justify-content: var(--radio-justify, flex-start);
 
   &.radio--align-end {
     --radio-flex-direction: row-reverse;
+    --radio-justify: flex-end;
   }
 }
 
@@ -60,6 +67,7 @@ label {
   height: 2rem;
   display: flex;
   align-items: center;
+  margin: var(--radio-input-margin, 0);
 }
 
 .xcu-radio-input {
@@ -135,6 +143,9 @@ label {
 }
 
 .xcu-radio-label {
+  display: flex;
+  align-items: center;
+  gap: var(--radio-padding, 1.2rem);
   font-weight: var(--font-weight--semi-bold);
   color: var(--textcolor);
 }
