refactor: change max width to match rem scale

--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -13,7 +13,7 @@
   font-weight: var(--font-weight--medium);
   line-height: 1.8rem;
   margin-top: 0;
-  max-width: 635px;
+  max-width: 64rem;
   min-height: 36px;
   min-width: 56px;
   padding: 0.8rem 1.2rem;
